--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  background-color: rgba(228, 226, 225, 0.589);
+
 }
 
 .app__container {
@@ -21,17 +21,21 @@
   border-radius: 10px;
   padding-left: 5px;
   margin-left: 10px;
+  margin-top: 40px;
+  height: 76vh;
 }
 
 .app__center {
+  margin-top: 50px;
   width: 50%;
+  height: 700px;
 }
 
 .app__right {
-  margin-top: 4px;
+  margin-top: 50px;
   margin-left: 0px;
   width: 20%;
-  height: 500px;
+  height: 75vh;
   margin-right: 80px;
 }
 
