--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,7 +4,8 @@
     margin-bottom: 20px;
     /* flex-direction: column; */
     justify-content: space-evenly;
-    background: rgba(111, 111, 149, 0.876);
+    background: rgba(29, 29, 110, 0.603);
+    color: white;
   }
 
   .app__dropdown{
